# discord-temp-bot

./: README.md  main.py  pyproject.toml
cogs/: temp_cog.py
tests/: test_discord_temp_bot.py
