[tool.poetry]
name = "discord-temp-bot"
version = "0.1.0"
description = ""
authors = ["mopeneko <mopeneko@lem0n.cc>"]

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
